--- a/src/sections/about/style.css
+++ b/src/sections/about/style.css
@@ -94,7 +94,13 @@
 
   .about__image {
     width: 100%;
-    height: 378px;
+    /* height: 378px; */
+  }
+}
+
+@media screen and (max-width: 475px) {
+  .about__image {
+    height: 429px;
   }
 }
 
